PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-111_produit_invalide4/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:12: error: invalid type argument of unary ‘*’ (have ‘int’)
    3 |     return *2;
      |            ^~

return code: 1
